--- a/vue3/vue-router/package.json
+++ b/vue3/vue-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-vue3",
+  "name": "vue-router",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,23 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^10.1.2",
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.5",
+    "pinia": "^2.0.36",
     "vue": "^3.3.2",
-    "axios": "^1.1.3",
-    "element-plus": "^2.2.19"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
-    "vite": "^4.3.5",
-    "mockjs": "1.1.0",
-    "vite-plugin-mock": "^2.9.6"
+    "sass": "^1.62.1",
+    "unplugin-auto-import": "^0.16.2",
+    "unplugin-icons": "^0.16.3",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.3.5"
   }
 }
