--- a/vue3/PlatForm/package.json
+++ b/vue3/PlatForm/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "ant-design-vue": "^4.0.0-rc.6",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -26,6 +27,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
   }
