--- a/vue3/PlatForm/package.json
+++ b/vue3/PlatForm/package.json
@@ -26,6 +26,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
     "unplugin-vue-components": "^0.25.1",
