--- a/vue3/PlatForm/package.json
+++ b/vue3/PlatForm/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "ant-design-vue": "^4.0.0-rc.6",
+    "ant-design-vue": "^3.2.20",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
