--- a/vue3/PlatForm/package.json
+++ b/vue3/PlatForm/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ant-design-vue": "^3.2.20",
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
@@ -28,6 +29,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
     "less": "^4.1.3",
+    "mockjs": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
     "unplugin-vue-components": "^0.25.1",
