--- a/vue3/PlatForm/package.json
+++ b/vue3/PlatForm/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.4",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
